--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -46,12 +46,13 @@
                 <p class="mt-3">{{ product.description }}</p>
 
                 <h4>Reviews</h4><h4>Tell us what you think!</h4>
-                <a href="{% url 'add_review' product.pk %}">Add Review</a>
                 <form action="{% url 'like_product' product.pk %}" method="POST">
                     {% csrf_token %}
-                    <button type="submit" name="product_id" value="{{ product.id }}" class="btn btn-red">Like</button>
-
+                    <button type="submit" name="product_id" value="{{ product.id }}" class="btn btn-red">Like</button> - {{ total_likes }}
                 </form>
+                <br>
+                <a href="{% url 'add_review' product.pk %}">Add Review</a>
+
                 <hr>
                 <div class="review-list">
                     {% if not product.products.all %}
